# rust-analyzer.vs

./: .editorconfig  .gitattributes  .gitignore  .globalconfig  PREREQUISITES.md  README.md  vs-publish.json
.github/: FUNDING.yml
.github/workflows/: cdp.yml  release.yml
src/: KS.Common.targets  KS.Tests.Common.targets  RustAnalyzer.sln  RustAnalyzer.sln.DotSettings  RustAnalyzer.vsext
src/RustAnalyzer.Remote/: RemoteTargets.cs  RustAnalyzer.Remote.csproj  Wsl.cs
src/RustAnalyzer.Remote.UnitTests/: RemoteTargetsTests.cs  RustAnalyzer.Remote.UnitTests.csproj
src/RustAnalyzer.TestAdapter.UnitTests/: MessageLogger.cs  RustAnalyzer.TestAdapter.UnitTests.csproj  SpyFrameworkHandle.cs  SpyTestCaseDiscoverySink.cs  TestDiscovererTests.AdditionalBuildArgsTestsAsync.bin_with_example.approved.txt  TestDiscovererTests.DiscoverTestsTests.hello_library.approved.txt  TestDiscovererTests.DiscoverTestsTestsAsync.hello_library.approved.txt  TestDiscovererTests.cs  TestExecutorTests.cs  TestsWithLogger.cs  (+2 more)
src/TestProjects/hello_workspace2/: Cargo.toml
src/TestProjects/hello_workspace2/shared/src/: lib.rs  models.rs
src/TestProjects/hello_workspace2/shared/src/systems/: mod.rs
src/TestProjects/hello_workspace2/shared2/src/: lib.rs  models.rs
src/TestProjects/hello_workspace2/shared2/src/systems/: mod.rs  system_a2.rs  system_b2.rs
src/TestProjects/hello_workspace2/src/: main.rs
src/TestProjects/workspace_mixed/: Cargo.toml
src/TestProjects/workspace_mixed/shared/: Cargo.toml
src/TestProjects/workspace_mixed/shared/src/: models.rs
src/TestProjects/workspace_mixed/src/: libx.rs  main.rs
(+387 files in other folders)
