[workspace]

members = [
    "shared",
    "shared2",
]

[package]
name = "main"
version = "0.1.0"
authors = ["Your Name Here"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "./shared" }
shared2 = { path = "./shared2" }
