[workspace]

members = [
    "shared",
]

[package]
name = "main"
version = "0.1.0"
authors = ["Your Name Here"]
edition = "2018"

[lib]
path = "src/libx.rs"

[[bin]]
name = "bin1"
path = "src/main.rs"

[[bin]]
name = "bin2"
path = "src/main.rs"

[[test]]
name = "test1"
path = "src/main.rs"

[[test]]
name = "test2"
path = "src/main.rs"

[[example]]
name = "example1"
path = "src/main.rs"

[[example]]
name = "example2"
path = "src/main.rs"

[[example]]
name = "example3"
path = "src/main.rs"

[[bench]]
name = "bench1"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "./shared" }
